# remind_me

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CODE_REVIEW.md  README.md  RELEASE_NOTES.md  SECURITY.md  memory_dashboard.jsx  memory_mcp.py  pyproject.toml  remind_me_dashboard.jsx  remind_me_mcp.py  remind_me_spec.docx
.claude/: settings.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmark-smoke.yml  ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-package-structure/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-test-infrastructure/: 02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md  02-04-PLAN.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-quality-and-bug-fixes/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-code-quality-and-cleanup/: 04-01-PLAN.md  04-02-PLAN.md  04-VERIFICATION.md
.planning/phases/05-ci-cd-pipeline/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-VERIFICATION.md
.planning/phases/06-security-hardening/: 06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-UAT.md  06-VERIFICATION.md
.planning/phases/07-api-embedding-parity/: 07-RESEARCH.md  07-VERIFICATION.md
.planning/phases/08-performance-improvements/: 08-01-PLAN.md  08-01-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-gap-closure-async-fix-and-coverage/: 09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-RESEARCH.md  09-VERIFICATION.md
.planning/phases/12-atomic-decomposition/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-VERIFICATION.md
.planning/phases/13-structured-memory-and-transparency/: 13-02-PLAN.md  13-02-SUMMARY.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-vault-hygiene/: 14-01-PLAN.md  14-02-PLAN.md  14-02-SUMMARY.md  14-VALIDATION.md  14-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: README.md  RESULTS.md  __init__.py  before_after.py  download_data.py  embedders.py  harness.py  ingest.py  longmemeval.py  metrics.py  runner.py  synthetic.py
benchmarks/sample/: longmemeval_sample.json
docs/: MIGRATION.md  cerebras-knowledge-capability-review-2026-07-20.md  cognee-capability-review-2026-07-20.md  dbs-integration-review-2026-07-21.md  openapi.yaml
hub/: Containerfile  README.md  client-setup.sh  e2e_test.py  main.py  setup.sh
hub/deploy/: README.md  docker-compose.yml  fly.toml  hub.env.example  postgres.env.example  railway.json  remind-me-hub.container  remind-me-postgres.container  remind-me.network
remind_me_mcp/: __init__.py  __main__.py  ann_index.py  api.py  backup.py  config.py  consolidation.py  db.py  dbs_import.py  embeddings.py  exporter.py  formatting.py  importer.py  mempalace_import.py  models.py  oauth.py  peer_server.py  pid.py  query_expansion.py  remote.py  reranker.py  retrieval.py  server.py  sidecars.py  storage_interfaces.py  sync.py  telemetry.py  tools.py  updater.py  vitality.py  watcher.py  webhook_server.py  wiki.py
remind_me_mcp/dashboard/: App.jsx
remind_me_mcp/tools/: __init__.py  _shared.py  admin.py  capture.py  crud.py  entity.py  lifecycle.py  normalize.py  search.py  wiki.py
tests/: conftest.py  test_ann_index.py  test_api.py  test_async.py  test_backup.py  test_benchmarks.py  test_chunking.py  test_co_retrieval.py  test_config.py  test_consolidation.py  test_contradiction_supersession.py  test_db.py  test_dbs_import.py  test_document_import.py  test_embedding_versioning.py  test_embeddings.py  test_entities.py  test_entity_retrieval.py  test_exporter.py  test_formatting.py  test_hub_deploy_templates.py  test_importer.py  test_main.py  test_mempalace_import.py  test_models.py  test_normalize.py  test_oauth.py  test_ollama_embedder.py  test_openapi_spec.py  test_peer_server.py  test_pid.py  test_query_expansion.py  test_remote.py  test_reranker.py  test_retrieval.py  test_rrf_weights.py  test_search_sanitize.py  test_server.py  test_smoke.py  test_storage_interfaces.py  (+9 more)
(+42 files in other folders)
