[project]
name = "remind-me-mcp"
version = "1.0.0"
description = "Persistent, searchable memory MCP server for Claude — works across Claude.ai, Claude Code, and Claude Desktop with multi-machine sync."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
semantic = [
    "sqlite-vec>=0.1.0",
    "onnxruntime>=1.16.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
remind-me-mcp = "remind_me_mcp:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"